--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.7.3",
+    "axios": "^0.21.0",
     "jsx": "^0.9.89",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
